Fix issue on IE11 with it not respecting height 100% unless parent containers are fixed

--- a/app/assets/stylesheets/pages/community/_communities.scss
+++ b/app/assets/stylesheets/pages/community/_communities.scss
@@ -115,6 +115,7 @@ $subtle-gray: #647981;
       width: 230px;
       @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
         margin-left: -250px;
+        height: auto;
       }
       box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
       ul {
